# physics

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  collision.ggb
config_files/: basic.json  position_constraint.json  rope_constraint.json  stacking_test.json  velocity_test.json
lib/: SDL2main.lib
src/: CMakeLists.txt  bound.cpp  bound.h  collision.h  constraint.h  draw_poly.h  gl_object.h  main.cpp  mat.h  mat_transforms.cpp  object.cpp  object.h  particle.h  poly.cpp  poly.h  poly_flags.h  test_collisions.cpp  vec2.cpp  vec2.h  vector_arithmetic.h  world.cpp  world.h
src/apps/: main.cpp  test_collisions.cpp
src/gl/: draw.h  draw_poly.h
src/physics/: bound.h  constraint.h  object.h  trig.h  world.h
src/src/: bound.cpp  constraint.cpp  draw.cpp  world.cpp
